syntax = "proto3";
package ai.mantik.engine.protos;

import "mantik/engine/ds.proto";

/** Represents a Mantik Item. */
message MantikItem {
    ObjectKind kind = 1;
    // JSON mantikfile
    string mantikfile_json = 2;
    oneof item {
        DataSet dataset = 3;
        Algorithm algorithm = 4;
        TrainableAlgorithm trainable_algorithm = 5;
        Pipeline pipeline = 6;
        Bridge bridge = 7;
    }
}

/* A Dataset item. */
message DataSet {
    string bridge = 1;
    DataType type = 2;
}

/* An algorithm Item. */
message Algorithm {
    string bridge = 1;
    DataType input_type = 2;
    DataType output_type = 3;
}

/* A Trainable Algorithm Item. */
message TrainableAlgorithm {
    string bridge = 1;
    // Data type for training
    DataType training_type = 2;
    // Data type for stats generated by training
    DataType stat_type = 3;
    // Data type when being trained
    DataType input_type = 4;
    DataType output_type = 5;
}

/* A Pipeline. */
message Pipeline {
    // Input Data Type
    DataType input_type = 1;
    // Output Data Type
    DataType output_type = 2;
}

/* A Bridge. */
message Bridge {
    string docker_image = 1;
    repeated string suitable = 2;
    int32 protocol = 3;
    string payload_content_type = 4;
}

enum ObjectKind {
    KIND_UNSPECIFIED = 0;
    KIND_DATASET = 1;
    KIND_ALGORITHM = 2;
    KIND_TRAINABLE_ALGORITHM = 3;
    KIND_PIPELINE = 4;
    KIND_BRIDGE = 5;
}
